--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,19 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
           crossorigin="anonymous">
         <title>{{ title }}</title>
+
 </head>
 <body>
+<header>
+     <nav class="navbar navbar-light bg-light">
+             <h1>Миссия Колонизация Марса</h1>
+             <a class="novbar-brand" href="#">Mars One</a>
+     </nav>
+    <h4 class="text-black-50 bg-white">И на Марсе будут яблони цвести!</h4>
+
+</header>
     <main role="main" class="container">
         {% block content %}{% endblock %}
     </main>
-
-
 </body>
 </html>
