--- a/templates/astronaut.html
+++ b/templates/astronaut.html
@@ -16,7 +16,9 @@
             <p></p>
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
                 <div class="form-group">
+                    <p></p>
                     <label for="classSelect">Какое у вас образование?</label>
+                    <p></p>
                     <select class="form-control" id="classSelect" name="class">
                         <option>Начальное</option>
                         <option>Среднее</option>
@@ -24,6 +26,7 @@
                         <option>А какое надо?</option>
                     </select>
                 </div>
+                <p></p>
                 {% for item in proff %}
                     <div class="form-check">
                          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
@@ -33,8 +36,10 @@
                     </div>
                 {% endfor %}
                 <div class="form-group">
+                    <p></p>
                     <label for="form-check">Укажите пол</label>
                     <div class="form-check">
+                        <p></p>
                         <input class="form-check-input" type="radio" name="sex" id="male" value="male" checked>
                         <label class="form-check-label" for="male">
                             Мужской
@@ -46,14 +51,26 @@
                             Женский
                         </label>
                     </div>
+                    <p></p>
                 <div class="form-group">
                     <label for="about">Почему Вы хотите принять участие в миссии?</label>
                     <textarea class="form-control" id="about" rows="3" name="about"></textarea>
                 </div>
                     <div class="form-group">
+                        <p></p>
                         <label for="photo">Приложите фотографию</label>
                         <input type="file" class="form-control-file" id="photo" name="file">
                     </div>
+                    <p></p>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sex" id="male" value="male">
+                        <label class="form-check-label" for="male">
+                            Готовы остаться на Марсе?
+                        </label>
+                    </div>
+                    <p></p>
                     <button type="submit" class="btn btn-primary">Отправить</button>
+
+
     </div>
 {% endblock %}
